@@ -2,7 +2,7 @@ OBJ=crawler.o rdup.o gfunc.o getdelim.o signal.o usage.o sha1.o regexp.o xattr.o
 HDR=rdup.h
 CMD=rdup
 SHA_IN=shared.sh shared.pl
-WRP_IN=rdup-dump rdup-snapshot rdup-restore rdup-snap-link
+WRP_IN=rdup-dump rdup-snapshot rdup-restore rdup-snap-link rdup-simple
 PRL_IN=rdup-gzip rdup-mirror rdup-crypt rdup-snap rdup-cp
 MAN8_IN=rdup.8 rdup-mirror.8 rdup-dump.8 rdup-restore.8 rdup-snap.8 rdup-snapshot.8 rdup-backups.8 rdup-cp.8 rdup-snap-link.8
 MAN1_IN=rdup-crypt.1 rdup-gzip.1
